[package]
name = "nowing"
version = "0.1.0"
edition = "2024"
description = "An embeddable distributed P2P knowledge graph using CRDTs as merge strategy."
license = "CC BY-SA 4.0"
license-file = "LICENSE"
repository = "https://github.com/jamescauwelier/nowing"
authors = ["James Cauwelier <james.cauwelier@gmail.com>"]

[dependencies]
